# minecraft-launcher-lib

./: .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .readthedocs.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-test.txt  setup.py
.gitea/ISSUE_TEMPLATE/: bug_report.yaml  config.yaml
.github/: pull_request_template.md
.github/workflows/: close.yml
.gitlab/issue_templates/: Bug.md  Default.md
.gitlab/merge_request_templates/: Default.md
.woodpecker/: deploy.yaml  lint.yaml  test.yaml  typecheck.yaml
doc/: account.rst  changelog.rst  command.rst  conf.py  contribute.rst  exceptions.rst  fabric.rst  faq.rst  forge.rst  glossary.rst  history.rst  index.rst  install.rst  installation.rst  introduction.rst  microsoft_account.rst  migration_guide.rst  natives.rst  requirements.txt  robots.txt  runtime.rst  showcase.rst  troubleshooting.rst  utils.rst
doc/_static/: custom.css
doc/develop/: automatic_tests.rst  build_and_edit_documentation.rst  codestyle.rst  index.rst  static_typing.rst  (+3 more)
examples/: FabricInstall.py  ForgeInstall.py  InstalationProgress.py  InstallationProgress.py  ModLoader.py  Mrpack.py  PyQtInstallation.py  PyQtLauncherWithOutput.py  PyQtLoginWindow.py  SimpleLaunch.py  TkinterLauncher.py
minecraft_launcher_lib/: __init__.py  _helper.py  account.py  command.py  exceptions.py  fabric.py  forge.py  helper.py  install.py  java_utils.py  microsoft_account.py  microsoft_types.py  mrpack.py  natives.py  news.py  quilt.py  runtime.py  types.py  utils.py  vanilla_launcher.py
tests/: __init__.py  _test_helper.py  test_command.py  test_exceptions.py  test_fabric.py  test_forge.py  test_install.py  test_java_utils.py  test_microsoft_account.py  test_mod_loader.py  test_mod_loader_fabric_quilt.py  test_mod_loader_forge.py  test_mod_loader_neoforge.py  test_mrpack.py  test_natives.py  test_news.py  test_quilt.py  test_runtime.py  test_utils.py  test_vanilla_launcher.py
(+59 files in other folders)
